[gd_scene load_steps=12 format=2]

[ext_resource path="res://ResourcesV2/Images/pixelSkyline.jpg" type="Texture" id=1]
[ext_resource path="res://ResourcesV2/Images/MainLogo.png" type="Texture" id=2]
[ext_resource path="res://ResourcesV2/Images/ControlsInactive.png" type="Texture" id=3]
[ext_resource path="res://ResourcesV2/Images/SoundInactive.png" type="Texture" id=4]
[ext_resource path="res://ResourcesV2/Images/ControlsActive.png" type="Texture" id=5]
[ext_resource path="res://ResourcesV2/Images/SoundActive.png" type="Texture" id=6]
[ext_resource path="res://ResourcesV2/Images/BackInactive.png" type="Texture" id=7]
[ext_resource path="res://ResourcesV2/Images/BackActive.png" type="Texture" id=8]
[ext_resource path="res://Scenes/MainScenesV2/GameplaySetting.gd" type="Script" id=9]
[ext_resource path="res://Resources/Fonts/8bitlimr.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 10 )

[node name="Background" type="TextureRect"]
anchor_top = -0.00173807
anchor_bottom = -0.00173807
margin_left = -1.33484
margin_right = 1366.67
margin_bottom = 765.0
rect_pivot_offset = Vector2( -298.754, 62.1887 )
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logoRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_top = 93.0
margin_right = 182.0
margin_bottom = 216.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controlButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -18.0
margin_right = 56.0
margin_bottom = 18.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soundButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = 38.0
margin_right = 53.0
margin_bottom = 76.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -86.0
margin_right = 42.0
margin_bottom = -41.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameLabel" type="Label" parent="."]
margin_left = 1106.58
margin_top = 169.525
margin_right = 1186.58
margin_bottom = 191.525
custom_fonts/font = SubResource( 1 )
text = "Username"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="controlButton" to="." method="_on_controlButton_pressed"]
[connection signal="pressed" from="soundButton" to="." method="_on_soundButton_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
